--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,12 @@
     <CApp.type>lib/synapse/mediator</CApp.type>
   </properties>
   <dependencies>
+  <!-- https://mvnrepository.com/artifact/com.melloware/jintellitype -->
+<dependency>
+    <groupId>com.melloware</groupId>
+    <artifactId>jintellitype</artifactId>
+    <version>1.3.7</version>
+</dependency>
     <dependency>
       <groupId>org.apache.abdera.wso2</groupId>
       <artifactId>abdera</artifactId>
