--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,5 @@
 eclipse.preferences.version=1
+encoding//Common/com/zylon/utils/Excel.java=UTF-8
+encoding//SFDC2UDP/zylon/sfdc2udp/pipeline/main/Main.java=UTF-8
 encoding//src/SFDC2IDP/BASE/GENERATER/TestProxy.java=UTF-8
 encoding//src/Test/TestMain.java=UTF-8
